# Skyscrapers

./: CMakeLists.txt  README.md  nul
include/: hw1.h  skyscrapers.h
src/: hw1.c  hw1_game.c  hw1_solver.c  skyscrapers.c  skyscrapers_game.c  skyscrapers_solver.c
tests/: unit_tests.cpp
